--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
         <div class="features-grid">
           <article class="feature-item">
             <img src="./static/images/icon-access-anywhere.svg" alt="Access your files, anywhere">
-            <h2>
-              Access your files, anywhere
-            </h2>
+            <h2>Access your files, anywhere</h2>
             <p>
               The ability to use a smartphone, tablet, or computer to access your account means your files follow you everywhere.
             </p>
@@ -143,8 +141,8 @@
         <div class="form-grid">
           <h3>Get early access today</h3>
           <p>It only takes a minute to sign up and our free starter tier is extremely generous. If you have any questions, our support team would be happy to help you.</p>
-          <form action="">
-            <input type="text" placeholder="email@example.com">
+          <form action="/" method="POST">
+            <input type="text" name="email" placeholder="email@example.com"aria-label="E-mail">
             <button class="button">Get Started For Free</button>
           </form>
         </div>
@@ -186,13 +184,13 @@
           </li>
         </ul>
         <div class="social">
-          <a href="#">
+          <a href="/#">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="#">
+          <a href="/#">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="/#">
             <i class="fab fa-instagram"></i>
           </a>
         </div>
